<resources>
    <string name="app_name">ALC 4 Phase 2</string>
    <string name="rv_image_description">RecyclerView row image</string>
    <string name="add_button_text">UPLOAD IMAGE</string>
    <string name="imageView_Content_Description">image selected from phone</string>
    <string name="title_tv_hint">Enter title</string>
    <string name="price_tv_hint">Enter price</string>
    <string name="description_tv_hint">Enter description</string>
    <string name="add_menu_title">Add New Deal</string>
    <string name="logout_menu_title">Log out</string>
    <string name="save_deal_menu_title">Save</string>
    <string name="delete_menu_title">Delete</string>
</resources>
