<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/titleDetailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/title_tv_hint"
            android:inputType="textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"/>

        <EditText
            android:id="@+id/priceDetailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/price_tv_hint"
            android:inputType="number|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDetailET"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"/>

        <EditText
            android:id="@+id/descriptionDetailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/description_tv_hint"
            android:inputType="textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceDetailET"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"/>

        <Button
            android:id="@+id/importImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_text"
            app:layout_constraintTop_toBottomOf="@id/descriptionDetailET"
            app:layout_constraintEnd_toEndOf="@id/descriptionDetailET"
            app:layout_constraintStart_toStartOf="@id/descriptionDetailET"
            android:layout_marginTop="24dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/importImageButton" />

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imageView_Content_Description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>